fixed padding on nav bar so that when you scroll up the the menu and logo and do not sink lower in visibility (a few pixels at the bottom of the menu and logo would get covered up or disappear when you scrolled back up the page and would slide back into place when you scrolled down so i fixed it)

--- a/css/style.css
+++ b/css/style.css
@@ -1884,7 +1884,7 @@ a.btn:focus {
 /* Media queries */
 @media(min-width:767px) {
     .navbar {
-        padding: 7px 0;
+        /*padding: 7px 0;*/
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
